Done with deskop, remianing the js finctionality

--- a/src/index.html
+++ b/src/index.html
@@ -205,7 +205,7 @@
       </div>
       <div class="pt-14 flex flex-row-reverse justify-between">
         <div>
-          <a href="#" class="px-6 py-3 bg-Marineblue text-White rounded-lg font-ubuntu font-bold">Next
+          <a href="#" class="px-6 py-3 bg-Marineblue text-White rounded-lg font-ubuntu font-bold" id="nextselect">Next
             Step</a>
         </div>
         <div>
@@ -215,184 +215,36 @@
       </div>
 
     </div>
-
-    <!-- pickaddons -->
-    <div class="bg-White flex rounded-lg p-2 shadow-lg hidden" id="pickaddons">
-
-      <div class="bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat p-5 rounded-l-lg">
-        <div class="p-5 space-y-8">
-
-          <div class="flex items-center">
-            <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
-              1
-            </div>
-            <div class=" ml-4">
-              <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 1</p>
-              <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">YOUR INFO</h3>
-            </div>
-          </div>
-
-          <div class="flex items-center">
-            <div class="w-10 h-10 flex items-center justify-center text-black rounded-full">
-              2
-            </div>
-            <div class=" ml-4">
-              <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 2</p>
-              <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SELECT PLAN</h3>
-            </div>
-          </div>
-
-          <div class="flex items-center">
-            <div class="w-10 h-10 flex items-center justify-center text-black rounded-full" id="three">
-              3
-            </div>
-            <div class="ml-4">
-              <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 3</p>
-              <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">ADD-ONS</h3>
-            </div>
-          </div>
-
-          <div class="flex items-center">
-            <div class="w-10 h-10 flex items-center justify-center text-black  rounded-full">
-              4
-            </div>
-            <div class="ml-4">
-              <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 4</p>
-              <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SUMMARY</h3>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Form Area -->
-      <div class="py-10 px-12">
-        <h1 class="text-Marineblue font-ubuntu text-2xl font-bold">Pick add-ons </h1>
-        <p class="font-ubuntu text-base text-Coolgray mb-5">
-          Add-ons help enhance your gaming
-          experience.
-        </p>
-
-        <div class="space-y-3 flex flex-col">
-          <div class="bg-White border-2 border-Coolgray rounded-lg">
-            <div class="flex space-x-4 p-4">
-              <div class="flex items-center">
-                <input id="checkbox" type="checkbox"
-                  class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
-                <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
-              </div>
-              <div class="flex justify-between items-center space-x-6">
-                <div>
-                  <h1 class="font-ubuntu text-lg text-Marineblue font-bold">
-                    Online Services
-                  </h1>
-                  <p class="whitespace-nowrap font-ubuntu text-Coolgray">
-                    Access to multiplayer games
-                  </p>
-                </div>
-                <div class="">
-                  <p>
-                    +$1/mo
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="bg-White border-2 border-Coolgray rounded-lg">
-            <div class="flex space-x-4 p-4">
-              <div class="flex items-center">
-                <input id="checkbox" type="checkbox"
-                  class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
-                <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
-              </div>
-              <div class="flex justify-between items-center space-x-6">
-                <div>
-                  <h1 class="font-ubuntu text-lg text-Marineblue font-bold">
-                    Larger storage
-                  </h1>
-                  <p class="whitespace-nowrap font-ubuntu text-Coolgray">
-                    Extra 1TB of cloud save
-                  </p>
-                </div>
-                <div>
-                  <p>
-                    +$1/mo
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="bg-White border-2 border-Coolgray rounded-lg">
-            <div class="flex space-x-4 p-4">
-              <div class="flex items-center">
-                <input id="checkbox" type="checkbox"
-                  class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
-                <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
-              </div>
-              <div class="flex justify-between items-center space-x-6">
-                <div>
-                  <h1 class="font-ubuntu text-lg text-Marineblue font-bold">
-                    Customizable Profile
-                  </h1>
-                  <p class="whitespace-nowrap font-ubuntu text-Coolgray">
-                    Custom theme on your
-                    profile
-                  </p>
-                </div>
-                <div>
-                  <p>
-                    +$1/mo
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="pt-14 flex flex-row-reverse justify-between">
-          <div>
-            <a href="#" class="px-6 py-3 bg-Marineblue text-White rounded-lg font-ubuntu font-bold">Next
-              Step</a>
-          </div>
-          <div>
-            <a href="#" class="px-6 py-3 bg-Coolgray text-White rounded-lg font-ubuntu font-bold">Go
-              Back</a>
-          </div>
-        </div>
-
-      </div>
-
-    </div>
   </div>
-
-  <!-- Finishingup -->
-  <div class="bg-White flex rounded-lg p-2 hidden">
+  <!-- pickaddons -->
+  <div class="bg-White flex rounded-lg p-2 shadow-lg hidden" id="pickaddon">
 
     <div class="bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat p-5 rounded-l-lg">
       <div class="p-5 space-y-8">
 
         <div class="flex items-center">
-          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+          <div class="w-10 h-10 flex items-center justify-center text-black rounded-full border-2 border-White">
             1
           </div>
-          <div class="ml-4">
+          <div class=" ml-4">
             <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 1</p>
             <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">YOUR INFO</h3>
           </div>
         </div>
 
         <div class="flex items-center">
-          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+          <div class="w-10 h-10 flex items-center justify-center text-black rounded-full border-2 border-White">
             2
           </div>
-          <div class="ml-4">
+          <div class=" ml-4">
             <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 2</p>
             <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SELECT PLAN</h3>
           </div>
         </div>
 
         <div class="flex items-center">
-          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+          <div class="w-10 h-10 flex items-center justify-center text-black rounded-full border-2 border-White"
+            id="three">
             3
           </div>
           <div class="ml-4">
@@ -402,7 +254,157 @@
         </div>
 
         <div class="flex items-center">
-          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+          <div class="w-10 h-10 flex items-center justify-center text-black  rounded-full border-2 border-White">
+            4
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 4</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SUMMARY</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Form Area -->
+    <div class="py-10 px-12">
+      <h1 class="text-Marineblue font-ubuntu text-2xl font-bold">Pick add-ons </h1>
+      <p class="font-ubuntu text-base text-Coolgray mb-5">
+        Add-ons help enhance your gaming
+        experience.
+      </p>
+
+      <div class="space-y-3 flex flex-col">
+        <div class="bg-White border-2 border-Coolgray rounded-lg">
+          <div class="flex space-x-4 p-4">
+            <div class="flex items-center">
+              <input id="checkbox" type="checkbox"
+                class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
+              <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
+            </div>
+            <div class="flex justify-between items-center space-x-6">
+              <div>
+                <h1 class="font-ubuntu text-lg text-Marineblue font-bold">
+                  Online Services
+                </h1>
+                <p class="whitespace-nowrap font-ubuntu text-Coolgray">
+                  Access to multiplayer games
+                </p>
+              </div>
+              <div class="">
+                <p>
+                  +$1/mo
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="bg-White border-2 border-Coolgray rounded-lg">
+          <div class="flex space-x-4 p-4">
+            <div class="flex items-center">
+              <input id="checkbox" type="checkbox"
+                class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
+              <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
+            </div>
+            <div class="flex justify-between items-center space-x-6">
+              <div>
+                <h1 class="font-ubuntu text-lg text-Marineblue font-bold">
+                  Larger storage
+                </h1>
+                <p class="whitespace-nowrap font-ubuntu text-Coolgray">
+                  Extra 1TB of cloud save
+                </p>
+              </div>
+              <div>
+                <p>
+                  +$1/mo
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="bg-White border-2 border-Coolgray rounded-lg">
+          <div class="flex space-x-4 p-4">
+            <div class="flex items-center">
+              <input id="checkbox" type="checkbox"
+                class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
+              <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
+            </div>
+            <div class="flex justify-between items-center space-x-6">
+              <div>
+                <h1 class="font-ubuntu text-lg text-Marineblue font-bold">
+                  Customizable Profile
+                </h1>
+                <p class="whitespace-nowrap font-ubuntu text-Coolgray">
+                  Custom theme on your
+                  profile
+                </p>
+              </div>
+              <div>
+                <p>
+                  +$1/mo
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="pt-14 flex flex-row-reverse justify-between">
+        <div>
+          <a href="#" class="px-6 py-3 bg-Marineblue text-White rounded-lg font-ubuntu font-bold" id="nextpick">Next
+            Step</a>
+        </div>
+        <div>
+          <a href="#" class="px-6 py-3 bg-Coolgray text-White rounded-lg font-ubuntu font-bold" id="gopick">Go
+            Back</a>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+  </div>
+
+  <!-- Finishingup -->
+  <div class="bg-White flex rounded-lg p-2 hidden" id="finishingup">
+
+    <div class="bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat p-5 rounded-l-lg">
+      <div class="p-5 space-y-8">
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black border-2 border-White rounded-full">
+            1
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 1</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">YOUR INFO</h3>
+          </div>
+        </div>
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black border-2 border-White rounded-full">
+            2
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 2</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">SELECT PLAN</h3>
+          </div>
+        </div>
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black border-2 border-White rounded-full">
+            3
+          </div>
+          <div class="ml-4">
+            <p class="font-ubuntu text-Coolgray whitespace-nowrap">STEP 3</p>
+            <h3 class="font-ubuntu text-lg text-White font-bold whitespace-nowrap">ADD-ONS</h3>
+          </div>
+        </div>
+
+        <div class="flex items-center">
+          <div class="w-10 h-10 flex items-center justify-center text-black border-2 border-White rounded-full"
+            id="four">
             4
           </div>
           <div class="ml-4">
@@ -464,11 +466,12 @@
         <!-- buttonside -->
         <div class=" pt-14 flex flex-row-reverse justify-between">
           <div>
-            <a href="#" class="px-6 py-3 bg-Purplishblue text-White rounded-lg font-ubuntu font-bold">Confirm
+            <a href="#" class="px-6 py-3 bg-Purplishblue text-White rounded-lg font-ubuntu font-bold"
+              id="confirm">Confirm
             </a>
           </div>
           <div>
-            <a href="#" class="px-6 py-3 bg-Coolgray text-White rounded-lg font-ubuntu font-bold">Go
+            <a href="#" class="px-6 py-3 bg-Coolgray text-White rounded-lg font-ubuntu font-bold" id="gofin">Go
               Back</a>
           </div>
         </div>
@@ -476,48 +479,51 @@
       </div>
     </div>
   </div>
+
+
   <!-- lastpage -->
-  <div class="bg-White flex rounded-lg mx-auto max-w-4xl mt-10 overflow-hidden hidden">
+  <div class="bg-White flex rounded-lg mx-auto max-w-4xl mt-10 overflow-hidden hidden flex-row" id="lastpage">
     <!-- Sidebar -->
     <div
-      class="relative bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat p-5 rounded-l-lg flex-shrink-0 w-1/2 flex flex-col justify-center">
+      class="bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat rounded-l-lg  flex flex-col justify-center p-5">
 
-      <div class="relative z-10 space-y-6">
+      <div class="space-y-6 py-4">
         <div class="flex items-center">
-          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+          <div class="w-10 h-10 flex items-center justify-center text-black border-2 border-White rounded-full">
             1
           </div>
-          <div class="ml-4">
+          <div class="ml-3">
             <p class="font-ubuntu text-Coolgray text-sm">STEP 1</p>
             <h3 class="font-ubuntu text-lg text-White font-bold">YOUR INFO</h3>
           </div>
         </div>
 
         <div class="flex items-center">
-          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+          <div class="w-10 h-10 flex items-center justify-center text-black border-2 border-White rounded-full">
             2
           </div>
-          <div class="ml-4">
+          <div class="ml-3">
             <p class="font-ubuntu text-Coolgray text-sm">STEP 2</p>
             <h3 class="font-ubuntu text-lg text-White font-bold">SELECT PLAN</h3>
           </div>
         </div>
 
         <div class="flex items-center">
-          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+          <div class="w-10 h-10 flex items-center justify-center text-black border-2 border-White rounded-full">
             3
           </div>
-          <div class="ml-4">
+          <div class="ml-3">
             <p class="font-ubuntu text-Coolgray text-sm">STEP 3</p>
             <h3 class="font-ubuntu text-lg text-White font-bold">ADD-ONS</h3>
           </div>
         </div>
 
         <div class="flex items-center">
-          <div class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue rounded-full">
+          <div
+            class="w-10 h-10 flex items-center justify-center text-black bg-Lightblue border-2 border-White rounded-full">
             4
           </div>
-          <div class="ml-4">
+          <div class="ml-3">
             <p class="font-ubuntu text-Coolgray text-sm">STEP 4</p>
             <h3 class="font-ubuntu text-lg text-White font-bold">SUMMARY</h3>
           </div>
@@ -526,7 +532,7 @@
     </div>
 
     <!-- Form Area -->
-    <div class="w-1/2 px-8 py-10 flex flex-col justify-center items-center">
+    <div class="px-8 py-20 flex flex-col justify-center items-center">
       <div class="mx-auto mb-6">
         <img src="./images/icon-thank-you.svg" alt="Thank you" class="w-24 h-24">
       </div>
