--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
 <body class="bg-Lightblue w-full h-screen flex items-center justify-center">
   <!-- PersonalInfo -->
-  <div class="bg-White flex rounded-lg p-2 shadow-lg" id="personalinfo">
+  <div class="bg-White flex rounded-lg p-2 shadow-lg hidden" id="personalinfo">
 
     <div class="bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat p-5 rounded-l-lg">
       <div class="p-5 space-y-8">
@@ -84,19 +84,37 @@
       <form action="#">
         <div class="space-y-6">
           <div>
-            <p class="text-base font-ubuntu font-bold">Name</p>
+            <div class="flex justify-between">
+              <p class="text-base font-ubuntu font-bold">Name</p>
+              <p class="text-xs text-Strawberryred font-ubuntu text-right hidden" id="feina">
+                This field is required
+              </p>
+            </div>
+
             <input type="text" class="w-full border-Lightgray px-2 py-2 border-2 rounded-lg"
-              placeholder="e.g. Stephen King" required>
+              placeholder="e.g. Stephen King" id="name">
           </div>
           <div>
-            <p class="text-base font-ubuntu font-bold">Email Address</p>
-            <input type="email" class="w-full border-Lightgray px-2 py-2 border-2 rounded-lg"
-              placeholder="e.g.stephenking@lorem.com" required>
+            <div class="flex justify-between">
+              <p class="text-base font-ubuntu font-bold">Email Address</p>
+              <p class="text-xs text-Strawberryred font-ubuntu text-right hidden" id="feiema">
+                This field is required
+              </p>
+            </div>
+
+            <input type="text" class="w-full border-Lightgray px-2 py-2 border-2 rounded-lg"
+              placeholder="e.g.stephenking@lorem.com" id="email">
           </div>
           <div>
-            <p class="text-base font-ubuntu font-bold">Phone Number</p>
+
+            <div class="flex justify-between">
+              <p class="text-base font-ubuntu font-bold">Phone Number</p>
+              <p class="text-xs text-Strawberryred font-ubuntu text-right hidden" id="feinom">
+                This field is required
+              </p>
+            </div>
             <input type="text" class="w-full border-Lightgray px-2 py-2 border-2 rounded-lg"
-              placeholder="e.g. +1 234 567 890" required>
+              placeholder="e.g. +1 234 567 890" id="number">
           </div>
         </div>
         <div class="flex justify-end py-2" id="nextper">
@@ -107,8 +125,8 @@
   </div>
 
   <!-- selectPlanPage -->
-  <div class="bg-White rounded-lg p-2 shadow-lg flex hidden" id="selectPlanPage">
-    <div class=" bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat p-5 rounded-l-lg">
+  <div class="bg-White rounded-lg p-2 shadow-lg flex" id="selectPlanPage">
+    <div class=" bg-[url('./images/bg-sidebar-desktop.svg')] bg-cover bg-no-repeat p-5 rounded-l-lg">
       <div class=" space-y-8">
 
         <div class="flex items-center">
@@ -163,12 +181,12 @@
 
       <div class="space-x-2 grid grid-cols-3 ">
         <div
-          class="w-40 h-48 border-2 border-Coolgray  items-start justify-between p-6 rounded-lg hover:ring-2  hover:ring-Pastelblue hover:border-0 hover:bg-Alabaster">
+          class="w-40  border-2 border-Coolgray  items-start justify-between p-6 rounded-lg hover:ring-2  hover:ring-Pastelblue hover:border-0 hover:bg-Alabaster">
           <img src="./images/icon-arcade.svg" alt="arcade" class="w-12 h-12">
           <h3 class="text-lg text-Marineblue font-ubuntu font-bold mt-10">
             Arcade
           </h3>
-          <p class="font-ubuntu text-Coolgray whitespace-nowrap">
+          <p class="font-ubuntu text-Coolgray whitespace-nowrap" id="arcadeprice">
             $9/mo
           </p>
           <p class="font-ubuntu  whitespace-nowrap font-semibold">
@@ -176,12 +194,12 @@
           </p>
         </div>
         <div
-          class="w-40 h-48 border-2 border-Coolgray  items-start justify-between p-6 rounded-lg hover:ring-2  hover:ring-Pastelblue hover:border-0 hover:bg-Alabaster">
+          class="w-40  border-2 border-Coolgray  items-start justify-between p-6 rounded-lg hover:ring-2  hover:ring-Pastelblue hover:border-0 hover:bg-Alabaster">
           <img src="./images/icon-advanced.svg" alt="arcade" class="w-12 h-12">
           <h3 class="text-lg text-Marineblue font-ubuntu font-bold mt-10">
             Advanced
           </h3>
-          <p class="font-ubuntu text-Coolgray whitespace-nowrap">
+          <p class="font-ubuntu text-Coolgray whitespace-nowrap" id="advanceprice">
             $12/mo
           </p>
           <p class="font-ubuntu  whitespace-nowrap font-semibold">
@@ -189,21 +207,29 @@
           </p>
         </div>
         <div
-          class="w-40 h-48 border-2 border-Coolgray  items-start justify-between p-6 rounded-lg hover:ring-2  hover:ring-Pastelblue hover:border-0 hover:bg-Alabaster">
+          class="w-40 border-2 border-Coolgray  items-start justify-between p-6 rounded-lg hover:ring-2  hover:ring-Pastelblue hover:border-0 hover:bg-Alabaster">
           <img src="./images/icon-pro.svg" alt="arcade" class="w-12 h-12">
           <h3 class="text-lg text-Marineblue font-ubuntu font-bold mt-10">
             Pro
           </h3>
-          <p class="font-ubuntu text-Coolgray whitespace-nowrap">
-            $15/mo
+          <p class="font-ubuntu text-Coolgray whitespace-nowrap" id="proprice">
+            $15/m0
           </p>
           <p class="font-ubuntu text-black whitespace-nowrap font-semibold">
             2 month free
           </p>
         </div>
+        <div class="switcher mt-10">
+          <p class="monthly sw-active">Monthly</p>
+          <label class="switch">
+            <input type="checkbox" id="togglecheckbox" />
+            <span class=" slider round"></span>
+          </label>
+          <p class="yearly">Yearly</p>
+        </div>
 
       </div>
-      <div class="pt-14 flex flex-row-reverse justify-between">
+      <div class="flex flex-row-reverse justify-between">
         <div>
           <a href="#" class="px-6 py-3 bg-Marineblue text-White rounded-lg font-ubuntu font-bold" id="nextselect">Next
             Step</a>
@@ -291,7 +317,7 @@
                 </p>
               </div>
               <div class="">
-                <p>
+                <p class="font-ubuntu text-Purplishblue font-bold" id="onlineprice">
                   +$1/mo
                 </p>
               </div>
@@ -317,8 +343,8 @@
                 </p>
               </div>
               <div>
-                <p>
-                  +$1/mo
+                <p class="font-ubuntu text-Purplishblue font-bold" id="largeprice">
+                  +$2/mo
                 </p>
               </div>
             </div>
@@ -342,8 +368,8 @@
                 </p>
               </div>
               <div>
-                <p>
-                  +$1/mo
+                <p class="font-ubuntu text-Purplishblue font-bold" id="themeprice">
+                  +$2/mo
                 </p>
               </div>
             </div>
