Done with deskop, remianing the js finctionality

--- a/src/index.html
+++ b/src/index.html
@@ -303,7 +303,7 @@
       </p>
 
       <div class="space-y-3 flex flex-col">
-        <div class="bg-White border-2 border-Coolgray rounded-lg">
+        <div class="bg-White border-2 border-Coolgray rounded-lg clickr">
           <div class="flex space-x-4 p-4">
             <div class="flex items-center">
               <input id="checkbox" type="checkbox"
@@ -329,7 +329,7 @@
         </div>
 
 
-        <div class="bg-White border-2 border-Coolgray rounded-lg">
+        <div class="bg-White border-2 border-Coolgray rounded-lg clickr">
           <div class="flex space-x-4 p-4">
             <div class="flex items-center">
               <input id="checkbox" type="checkbox"
@@ -353,7 +353,7 @@
             </div>
           </div>
         </div>
-        <div class="bg-White border-2 border-Coolgray rounded-lg">
+        <div class="bg-White border-2 border-Coolgray rounded-lg clickr">
           <div class="flex space-x-4 p-4">
             <div class="flex items-center">
               <input id="checkbox" type="checkbox"
