Done with desktop

--- a/src/index.html
+++ b/src/index.html
@@ -303,7 +303,7 @@
       </p>
 
       <div class="space-y-3 flex flex-col">
-        <div class="bg-White border-2 border-Coolgray rounded-lg clickr">
+        <div class="bg-White border-2 border-Coolgray rounded-lg clickr" id="onl">
           <div class="flex space-x-4 p-4">
             <div class="flex items-center">
               <input id="checkbox" type="checkbox"
@@ -329,7 +329,7 @@
         </div>
 
 
-        <div class="bg-White border-2 border-Coolgray rounded-lg clickr">
+        <div class="bg-White border-2 border-Coolgray rounded-lg clickr" id="lar">
           <div class="flex space-x-4 p-4">
             <div class="flex items-center">
               <input id="checkbox" type="checkbox"
@@ -353,7 +353,7 @@
             </div>
           </div>
         </div>
-        <div class="bg-White border-2 border-Coolgray rounded-lg clickr">
+        <div class="bg-White border-2 border-Coolgray rounded-lg clickr" id="cus">
           <div class="flex space-x-4 p-4">
             <div class="flex items-center">
               <input id="checkbox" type="checkbox"
@@ -469,12 +469,16 @@
           </div>
           <div
             class="bg-Magnolia p-4 flex flex-col justify-between items-center rounded-b-lg border-t-2 border-Coolgray">
-            <div class="flex w-full justify-between items-center mb-2">
-              <p class="font-ubuntu font-bold text-Coolgray text-base">Online Services</p>
+            <div class=" flex w-full justify-between items-center mb-2">
+              <p class="font-ubuntu font-bold text-Coolgray text-base" id="firstaddonh1"></p>
               <p class="font-ubuntu  text-Marineblue text-base">+$1/mo</p>
             </div>
             <div class="flex w-full justify-between items-center">
-              <p class="font-ubuntu font-bold text-Coolgray text-base">Larger Storage</p>
+              <p class="font-ubuntu font-bold text-Coolgray text-base" id="secondaddonh1"></p>
+              <p class="font-ubuntu  text-Marineblue text-base">+$2/mo</p>
+            </div>
+            <div class="flex w-full justify-between items-center">
+              <p class="font-ubuntu font-bold text-Coolgray text-base" id="thirdaddonh1">Larger Storage</p>
               <p class="font-ubuntu  text-Marineblue text-base">+$2/mo</p>
             </div>
           </div>
