--- a/src/index.html
+++ b/src/index.html
@@ -365,7 +365,7 @@
                 <h1 class="font-ubuntu text-lg text-Marineblue font-bold">
                   Customizable Profile
                 </h1>
-                <p class="whitespace-nowrap font-ubuntu text-Coolgray">
+                <p class=" whitespace-nowrap font-ubuntu text-Coolgray">
                   Custom theme on your
                   profile
                 </p>
@@ -457,7 +457,7 @@
           <div class="bg-Magnolia p-4 flex justify-between items-center rounded-t-lg">
             <div>
               <h1 class="font-ubuntu font-bold text-Marineblue text-lg" id="finh1"></h1>
-              <a class="font-ubuntu text-base text-Coolgray underline cursor-pointer">
+              <a class="font-ubuntu text-base text-Coolgray underline cursor-pointer" id="change">
                 Change
               </a>
             </div>
@@ -471,15 +471,15 @@
             class="bg-Magnolia p-4 flex flex-col justify-between items-center rounded-b-lg border-t-2 border-Coolgray">
             <div class=" flex w-full justify-between items-center mb-2">
               <p class="font-ubuntu font-bold text-Coolgray text-base" id="firstaddonh1"></p>
-              <p class="font-ubuntu  text-Marineblue text-base">+$1/mo</p>
+              <p class="font-ubuntu  text-Marineblue text-base" id="p1"></p>
             </div>
             <div class="flex w-full justify-between items-center">
               <p class="font-ubuntu font-bold text-Coolgray text-base" id="secondaddonh1"></p>
-              <p class="font-ubuntu  text-Marineblue text-base">+$2/mo</p>
+              <p class="font-ubuntu  text-Marineblue text-base" id="p2"></p>
             </div>
             <div class="flex w-full justify-between items-center">
-              <p class="font-ubuntu font-bold text-Coolgray text-base" id="thirdaddonh1">Larger Storage</p>
-              <p class="font-ubuntu  text-Marineblue text-base">+$2/mo</p>
+              <p class="font-ubuntu font-bold text-Coolgray text-base" id="thirdaddonh1"></p>
+              <p class="font-ubuntu  text-Marineblue text-base" id="p3"></p>
             </div>
           </div>
 
@@ -487,7 +487,7 @@
             <div class="bg-White p-4 flex flex-col justify-between items-center ">
 
               <div class="flex w-full justify-between items-center">
-                <p class="font-ubuntu font-bold text-Coolgray text-base">Total(per month)</p>
+                <p class="font-ubuntu font-bold text-Coolgray text-base" id="total">Total(per month)</p>
                 <p class="font-ubuntu  text-Purplishblue text-xl font-bold">+$12/mo</p>
               </div>
             </div>
