Done with desktop

--- a/src/index.html
+++ b/src/index.html
@@ -306,8 +306,8 @@
         <div class="bg-White border-2 border-Coolgray rounded-lg clickr" id="onl">
           <div class="flex space-x-4 p-4">
             <div class="flex items-center">
-              <input id="checkbox" type="checkbox"
-                class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
+              <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out"
+                id="firstCheck">
               <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
             </div>
             <div class="flex justify-between items-center space-x-6">
@@ -332,8 +332,8 @@
         <div class="bg-White border-2 border-Coolgray rounded-lg clickr" id="lar">
           <div class="flex space-x-4 p-4">
             <div class="flex items-center">
-              <input id="checkbox" type="checkbox"
-                class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out">
+              <input type="checkbox" class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out"
+                id="secondCheck">
               <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
             </div>
             <div class="flex justify-between items-center space-x-6">
@@ -356,8 +356,9 @@
         <div class="bg-White border-2 border-Coolgray rounded-lg clickr" id="cus">
           <div class="flex space-x-4 p-4">
             <div class="flex items-center">
-              <input id="checkbox" type="checkbox"
-                class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out checked:">
+              <input type="checkbox"
+                class="form-checkbox h-5 w-5 text-blue-600 transition duration-150 ease-in-out checked:"
+                id="thirdCheck">
               <label for="checkbox" class="ml-2 text-sm font-medium text-gray-900"></label>
             </div>
             <div class="flex justify-between items-center space-x-6">
@@ -468,8 +469,8 @@
             </div>
           </div>
           <div
-            class="bg-Magnolia p-4 flex flex-col justify-between items-center rounded-b-lg border-t-2 border-Coolgray">
-            <div class=" flex w-full justify-between items-center mb-2">
+            class="bg-Magnolia p-4 flex flex-col justify-between items-center rounded-b-lg border-t-2 border-Coolgray space-y-2">
+            <div class=" flex w-full justify-between items-center">
               <p class="font-ubuntu font-bold text-Coolgray text-base" id="firstaddonh1"></p>
               <p class="font-ubuntu  text-Marineblue text-base" id="p1"></p>
             </div>
