Done with desktop

--- a/src/index.html
+++ b/src/index.html
@@ -489,7 +489,7 @@
 
               <div class="flex w-full justify-between items-center">
                 <p class="font-ubuntu font-bold text-Coolgray text-base" id="total">Total(per month)</p>
-                <p class="font-ubuntu  text-Purplishblue text-xl font-bold">+$12/mo</p>
+                <p class="font-ubuntu  text-Purplishblue text-xl font-bold" id="totalPrice">+$12/mo</p>
               </div>
             </div>
 
