Done with desktop

--- a/src/index.html
+++ b/src/index.html
@@ -589,6 +589,6 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
-<script src="/main.js"></script>
+<script src="main.js"></script>
 
 </html>
