--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
 <body class="bg-Lightblue w-full h-screen flex items-center justify-center">
   <!-- PersonalInfo -->
-  <div class="bg-White flex rounded-lg p-2 shadow-lg hidden" id="personalinfo">
+  <div class="bg-White flex rounded-lg p-2 shadow-lg" id="personalinfo">
 
     <div class="bg-[url('./images/bg-sidebar-desktop.svg')] bg-contain bg-no-repeat p-5 rounded-l-lg">
       <div class="p-5 space-y-8">
@@ -125,7 +125,7 @@
   </div>
 
   <!-- selectPlanPage -->
-  <div class="bg-White rounded-lg p-2 shadow-lg flex" id="selectPlanPage">
+  <div class="bg-White rounded-lg p-2 shadow-lg flex hidden" id="selectPlanPage">
     <div class=" bg-[url('./images/bg-sidebar-desktop.svg')] bg-cover bg-no-repeat p-5 rounded-l-lg">
       <div class=" space-y-8">
 
